As a user i can recieve transfers [Delivers #175560751]
